--- a/mandelbulber2/formula/ui/pseudo_kleinian_mod6.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian_mod6.ui
@@ -2351,7 +2351,7 @@ Multiplier:</string>
         <item row="3" column="0">
          <widget class="QLabel" name="label_69">
           <property name="text">
-           <string notr="true">offfset:</string>
+           <string notr="true">offset:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -2374,6 +2374,61 @@ Multiplier:</string>
     </widget>
    </item>
    <item>
+    <layout class="QGridLayout" name="gridLayout_20" columnstretch="0,1,0">
+     <item row="2" column="2">
+      <widget class="Line" name="line_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_46">
+       <property name="text">
+        <string>thick:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox_analyticDE_offset_0">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="suffix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>6</number>
+       </property>
+       <property name="minimum">
+        <double>-99.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>99.989999999999995</double>
+       </property>
+       <property name="singleStep">
+        <double>0.010000000000000</double>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledF_false">
      <property name="font">
       <font>
@@ -2390,7 +2445,7 @@ Multiplier:</string>
      <property name="checkable">
       <bool>true</bool>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_30" stretch="0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_30" stretch="0,0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -2406,30 +2461,6 @@ Multiplier:</string>
       <property name="bottomMargin">
        <number>2</number>
       </property>
-      <item>
-       <layout class="QGridLayout" name="gridLayout_20" columnstretch="0,1">
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_46">
-          <property name="text">
-           <string>aBox Kali  group iterations:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="MySpinBox" name="spinboxInt_transf_int_16">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="maximum">
-           <number>999</number>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_27" columnstretch="0,0,1">
         <item row="3" column="2">
