--- a/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
@@ -40,7 +40,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_38">
        <property name="text">
-        <string notr="true">1 / scale:</string>
+        <string notr="true">scale:</string>
        </property>
       </widget>
      </item>
@@ -107,9 +107,9 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabled">
+      <widget class="QLabel" name="label_46">
        <property name="text">
-        <string>radius:</string>
+        <string notr="true">radius:</string>
        </property>
       </widget>
      </item>
@@ -1237,7 +1237,7 @@
      <property name="title">
       <string>Custom DE</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,0,0,0,0,0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -1394,7 +1394,7 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetA_p01">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0">
           <property name="enabled">
            <bool>true</bool>
           </property>
@@ -1434,6 +1434,20 @@
        </layout>
       </item>
       <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
+        <property name="text">
+         <string>N</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledO_false">
+        <property name="text">
+         <string>O</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="MyCheckBox" name="checkBox_transf_function_enabledM_false">
         <property name="text">
          <string>M</string>
@@ -1441,9 +1455,16 @@
        </widget>
       </item>
       <item>
-       <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledS_false">
         <property name="text">
-         <string>N</string>
+         <string>S</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledT_false">
+        <property name="text">
+         <string>T</string>
         </property>
        </widget>
       </item>
