--- a/mandelbulber2/formula/ui/transf_difs_cayley2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_cayley2.ui
@@ -688,6 +688,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="label_40">
+     <property name="text">
+      <string>DE</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QGridLayout" name="gridLayout_18" columnstretch="0,0,1">
      <property name="spacing">
       <number>2</number>
@@ -826,7 +833,7 @@
       </widget>
      </item>
      <item row="1" column="2">
-      <widget class="MyDoubleSpinBox" name="spinbox3_transf_addition_constant_111_y">
+      <widget class="MyDoubleSpinBox" name="spinbox3_transf_offset_110_y">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -854,7 +861,7 @@
       </widget>
      </item>
      <item row="2" column="2">
-      <widget class="MyDoubleSpinBox" name="spinbox3_transf_addition_constant_111_z">
+      <widget class="MyDoubleSpinBox" name="spinbox3_transf_offset_110_z">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -903,7 +910,7 @@
       </widget>
      </item>
      <item row="0" column="2">
-      <widget class="MyDoubleSpinBox" name="spinbox3_transf_addition_constant_111_x">
+      <widget class="MyDoubleSpinBox" name="spinbox3_transf_offset_110_x">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
